# sv-sim

./: .gitmodules  Cargo.toml  LICENCE.md  README.md  generate_docs.sh
.github/workflows/: build.yml  doc.yml
src/: lib.rs  logic.rs  main.rs  module.rs  sim_time.rs  var_types.rs
sv/: blink.sv  cu_top.sv  flex_counter.sv
