[package]
name = "sv_sim"
version = "0.1.0"
edition = "2021"
description = "A simple SystemVerilog simulation tool written in rust"
repository = "https://github.com/DMoore12/sv-sim"
readme = "README.md"
license = "MIT"
categories = ["compilers", "parsing", "simulation"]
keywords = ["systemverilog", "systemverilog-simulation"]
exclude = [".*", "Better-Rust-Documentation*", "generate_docs.sh", "sv/*"]

[badges]
maintenance = { status = "..." }

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.16", features = ["derive"] }
env_logger = "0.11.5"
log = "0.4.22"
logos = "0.14.1"
